# scrann

./: .gitignore  Pipfile  flatpak-local-install.sh  io.github.bjorm.scrann.metainfo.xml  io.github.bjorm.scrann.yml  io.github.bjorndown.scrann.desktop  io.github.bjorndown.scrann.metainfo.xml  io.github.bjorndown.scrann.yml  local-install.sh  main.py  pyproject.toml  readme.md  requirements.txt  scrann.py  scratt.desktop  setup.py
scrann/: dbus.py  window.py
scrann/tools/: __init__.py  crop.py  pen.py
snap/: snapcraft.yaml
src/scrann/: __init__.py  dbus.py  log.py  window.py
src/scrann/tools/: __init__.py  crop.py  rectangle.py
